Add myself to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Shaun Wackerly <wackerly@hp.com>
 Shivaram Mysore <shivaram.mysore@gmail.com>
 Simeon Miteff <simeon.miteff@gmail.com>
 Stacey Sheldon <stac@corsa.com>
+Thomas Glanzmann <thomas@glanzmann.de>
 Trevor Pering <peringknife@google.com>
 Trung Truong <truonghuut@ecs.vuw.ac.nz>
 youf3 <youff3@gmail.com>
