Pending changes exported from your codespace

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,40 +1,87 @@
-Corporate Contributors
-======================
-Copyright (C) 2013 Nippon Telegraph and Telephone Corporation.
-Copyright (C) 2015 Research and Education Advanced Network New Zealand Ltd.
-Copyright (C) 2015 Open Networking Foundation
-Copyright (C) 2016 Hewlett Packard Enterprise Development LP
-
-Individual Contributors
-=======================
 Abhay B <abhay.b@hpe.com>
+Anurag Porripireddi <anuragprdi@anuragprdi-macbookpro.roam.corp.google.com>
+Anurag Porripireddi <anuragprdi@google.com>
+Bill Fisher <william.w.fisher@gmail.com>
 Bob Lantz <rlantz@cs.stanford.edu>
+Brad Cowie <brad@faucet.nz>
+Brad Cowie <brad@gizmoguy.net.nz>
 Brad Cowie <brad@wand.net.nz>
+Brandon Chau <brandonchau@google.com>
+Brendon Jones <brendon.jones@gmail.com>
 Callum Dickinson <callum.dickinson@catalyst.net.nz>
+Callum Dickinson <callum@huttradio.co.nz>
 Charlie Lewis <clewis@iqt.org>
+Charlie Lewis <clewis@quantumscape.com>
+Chris Lorier <chris.lorier@reannz.co.nz>
+Christophe Rene <crene@cisco.com>
+Christopher <chris.lorier@reannz.co.nz>
 Christopher Lorier <chris.lorier@reannz.co.nz>
 Culley Angus <culley.angus@reannz.co.nz>
 Davide Trentin <davide.trentin@noviflow.com>
+Dean Pemberton <dean@deanpemberton.com>
 Dean Pemberton <dean@nsrc.org>
-dr-clark <dr.clark@rocketmail.com>
+Elf Eldridge <kaiwhata@gmail.com>
+Ewen McNeill <ewen@naos.co.nz>
+Florian Grießer <63300156+flogriesser@users.noreply.github.com>
 Harshad Mulmuley <harshad.a.mulmuley@gmail.com>
+Harshad91 <harshad.a.mulmuley@gmail.com>
+Jamie <jamie@kwiius.com>
 Jayden Hewer <jayden.hewer@gmail.com>
 Joe Stringer <joe@wand.net.nz>
+Josh Bailey <anarkiwi@users.noreply.github.com>
+Josh Bailey <josh@vandervecken.com>
 Josh Bailey <joshb@google.com>
-kr1t1c4l <davidh@xecute.net>
+Juan Martinez <jmartinez@cray.com>
+KitL <clorier@gmail.com>
 Leo Scott <leo@sqi-inc.com>
-Mark Wutzke <mark.wutzke@alliedtelesis.co.nz>
+Mark Bishop <mab68@students.waikato.ac.nz>
+Mark Wutzke <mwutzke@users.noreply.github.com>
+MarkW <mwutzke@users.noreply.github.com>
+Michael Baird <michaelb_111@hotmail.com>
 Michael Washer <michael.washer@icloud.com>
-Monkey <monkey@vandervecken.com>
+Mohammed Alshaboti <alshaboti.it@gmail.com>
+Nambi A Gounder <aappachi@gmail.com>
+Nick Rogers <nick@sonoranet.com>
 Nisha Bhardwaj <nishu24nitjsr@gmail.com>
+None <None>
 Piyush Agarwal <agarwalpiyush@agarwalpiyush0.mtv.corp.google.com>
+Rebecca Chen <rechen@google.com>
+Renovate Bot <bot@renovateapp.com>
 Richard Sanger <rsanger@wand.net.nz>
+Richard Sanger <rsangerarj@gmail.com>
+Rob Fuller <mubix@users.noreply.github.com>
+Sam Ribeiro <ribeiro@google.com>
 Sam Russell <sam.h.russell@gmail.com>
+Samuel Ribeiro <ribeiro@google.com>
 Shaun Wackerly <wackerly@hp.com>
-Shivaram Mysore <shivaram.mysore@gmail.com>
+Shaun Wackerly <wackerly@hpe.com>
+Shota Nakamura <snak1219@gmail.com>
+Shota Nakamura <snakamura@wesleyan.edu>
 Simeon Miteff <simeon.miteff@gmail.com>
 Stacey Sheldon <stac@corsa.com>
 Thomas Glanzmann <thomas@glanzmann.de>
 Trevor Pering <peringknife@google.com>
-Trung Truong <truonghuut@ecs.vuw.ac.nz>
+Trung Truong <trungdtbk@gmail.com>
+Ubuntu <ubuntu@jb-fg.centie.net.au>
+Yiding Xu <yiding.xu@gmail.com>
+aappachi <aappachi@gmail.com>
+cglewis <clewis@iqt.org>
+clorier <50934868+clorier@users.noreply.github.com>
+dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
+dr-clark <dr.clark@rocketmail.com>
+kr1t1c4l <davidh@xecute.net>
+libunamari <marialibunao@gmail.com>
+loriscn12 <41514920+loriscn12@users.noreply.github.com>
+m@b <mab68@students.waikato.ac.nz>
+mab68 <mab68@students.waikato.ac.nz>
+nfz1 <nfz1@students.waikato.ac.nz>
+pyup-bot <github-bot@pyup.io>
+rahul217 <rahul217@gmail.com>
+renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
+shivarammysore <shivaram.mysore@gmail.com>
+trentindav <davide.trentin@noviflow.com>
+truonghuut <truonghuut@ecs.vuw.ac.nz>
+ubuntu <michaelb_111@hotmail.com>
 youf3 <youff3@gmail.com>
+yulinrm <yulinrm@google.com>
+zhiweicen <zhiweic@gmail.com>
